# BareMetalSTM32

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  plan.md  test.py  version.json  versioning.h
___Bootloader/: CMakeLists.txt  linker_script.ld  main.c  startup.c
___Bootloader/app/: CMakeLists.txt
___Bootloader/app/common/: CMakeLists.txt
___Bootloader/app/common/inc/: common.h  crc.h  queue.h
___Bootloader/app/common/src/: common.c  queue.c
___Bootloader/drivers/: CMakeLists.txt
___Bootloader/drivers/flash/: CMakeLists.txt
___Bootloader/drivers/flash/src/: flash.c
___Bootloader/drivers/led/: CMakeLists.txt
___Bootloader/drivers/uart/: CMakeLists.txt
___Bootloader/drivers/uart/src/: uart.c
app/: CMakeLists.txt
app/common/inc/: common.h  rb.h  sys.h
app/common/src/: common.c  crc.c  rb.c  sys.c
app/fsm/: CMakeLists.txt
app/fsm/inc/: uart_fsm.h
app/fsm/src/: uart_fsm.c
app/fw_update/: CMakeLists.txt
app/fw_update/inc/: fw_update.h
app/fw_update/src/: fw_update.c
app/msg_handler/: CMakeLists.txt
app/msg_handler/inc/: msg_definitions.h  msg_handler.h
app/msg_handler/src/: msg_definitions.c  msg_handler.c
app/protobuf_handler/: CMakeLists.txt
app/protobuf_handler/inc/: protobuf_handler.h
app/protobuf_handler/src/: protobuf_handler.c
drivers/: CMakeLists.txt
drivers/dma/: CMakeLists.txt
drivers/dma/inc/: dma.h
drivers/dma/src/: dma.c
drivers/flash/inc/: flash.h
drivers/flash/src/: flash.c
drivers/led/inc/: led.h
drivers/led/src/: led.c
drivers/uart/inc/: uart.h
drivers/uart/src/: uart.c
platform/: linker_script.ld  main.c  startup.c  toolchain.cmake
protobuf/: CMakeLists.txt
protobuf/msgs/: my_msg.options  my_msgs.proto
rtos_config/: CMakeLists.txt
rtos_config/inc/: FreeRTOSConfig.h
scripts/: c.py  d.py  debug_tool.py  fw_upd.py  gf.py  msgs.py  pad_metadata.py  uart_transfer.py
submodules/: CMakeLists.txt
uart_stack/: CMakeLists.txt
uart_stack/inc/: isotp.h  uart_stack.h  utils.h
uart_stack/src/: isotp.c  uart_stack.c  utils.c
